Fix: pb d alignement titre

--- a/app/globals.css
+++ b/app/globals.css
@@ -91,6 +91,7 @@ body {
 h1 {
   font-family: var(--font--lugrasimo), "arial", "sans serif";
   font-size: 4rem;
+  text-align: center;
 }
 
 h2 {
